src/objects/Batch_Configuration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Retries__c</fullName>
        <inlineHelpText>Maximum retries to fire the same batch Job.</inlineHelpText>
        <label>Max Retries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Recipients__c</fullName>
        <description>Semi-colon separated email addresses of notification recipients for Batch Apex Classes</description>
        <inlineHelpText>Semi-colon separated email addresses of notification recipients for Batch Apex Classes</inlineHelpText>
        <label>Notification Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Days_To_Retrieve__c</fullName>
        <description>Used in Text Literals to set the number of days to be included in query filter.</description>
        <inlineHelpText>Used in Text Literals to set the number of days to be included in query filter.</inlineHelpText>
        <label>Number Of Days To Retrieve</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Configuration Settings</label>
</CustomObject>